
    o Nickname: 'Much code. So tire. Wow'
    
NEW FUNCTIONS

    o densityQuick.lpp
    Fast kernel estimator of point process intensity on a network
    using 2D smoothing kernel.

    o bw.scott.iso
    Isotropic version of Scott's rule (for point patterns in any dimension).

    o data.lppm
    Extract the original data point pattern from a fitted model of class 'lppm'.
    
SIGNIFICANT USER-VISIBLE CHANGES

    o density.lpp
    New argument 'distance' offers a choice of different kernel methods.

    o bw.scott
    Now handles point patterns of any dimension.
    New arguments 'isotropic' and 'd'.

    o bw.ppl
    New argument 'shortcut' allows faster computation.
    Additional arguments '...' are now passed to density.ppp.
    
    o [<-.im
    New argument 'drop' controls behaviour when indices are missing
    as in 'x[] <- value'

    o as.im
    New argument 'stringsAsFactors' is recognised by many methods.
    It enables the creation of character-string-valued images.

    o plot.im
    Axes are now prevented from extending outside the image rectangle.

    o plot.im
    New argument 'zap'.

    o blur
    New argument 'kernel'.
    
    o Smooth.im
    New argument 'kernel'.

    o edge.Ripley
    Numerical stability has been improved on some platforms.
    Results may have changed in marginal cases (e.g. where the circle
    of radius r centred at X is tangent to an edge of the polygonal window). 
    
    o plot.pppmatching
    This existing function now has a help file.
    New argument 'adjust'.
    
BUG FIXES

    o densityVoronoi.lpp
    Did not correctly handle patterns containing duplicated points.
    Fixed.
    
    o localKcross.inhom, localLcross.inhom
    Argument lambdaX was ignored.
    Fixed.

    o "[.linim"
    Factor values were erroneously converted to integers, in some cases.
    Fixed.
    
    o effectfun
    In a multitype point process model, effectfun() ignored any
    user-specified value of 'marks'.
    Fixed.
