@@ -1,5 +1,5 @@
 Package: spatstat
-Version: 1.60-1.026
+Version: 1.60-1.027
 Date: 2019-08-16
 Title: Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
 Author: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>,
