@@ -2138,6 +2138,7 @@ export("rStraussHard")
 export("rsyst")
 export("rtemper")
 export("rthin")
+export("rthinclumps")
 export("rThomas")
 export("ruletextline")
 export("runifdisc")
