@@ -205,4 +205,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2019-01-10" "1.58-2" 1003 2586 0 110732 30470
 "2019-03-22" "1.59-0" 1010 2609 0 112044 30729
 "2019-06-23" "1.60-0" 1017 2628 0 113056 31026
-"2019-08-16" "1.60-1.026" 1021 2634 0 113443 31027
+"2019-08-16" "1.60-1.027" 1022 2635 0 113465 31027
